updated the agent to be more robust with more fail resistant. Updated the test to separate CI conform test and local functional test. Updated conftest.py to auto start and close the server.

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -59,7 +59,7 @@ jobs:
         run: uv sync --extra test
 
       - name: Run tests
-        run: uv run pytest -v --agent-url http://localhost:9009
+        run: uv run pytest -v -m ci tests/
 
       - name: Stop container and show logs
         if: always()
